--- a/_config.yml
+++ b/_config.yml
@@ -294,3 +294,13 @@ defaults:
       toc: true
       share: true
       related: true
+  - scope:
+      path: ""
+      type: pages
+    values:
+      author_profile: true
+      read_time: false
+      comments: false
+      toc: false
+      share: false
+      related: false
