feat: add new demo

--- a/_data/demo.yml
+++ b/_data/demo.yml
@@ -15,3 +15,14 @@ list:
   - title: "表单参数"
   - title: "href中的JavaScript"
   - title: "多图4布局"
+  - title: "表格实例"
+  - title: "input输入tab"
+  - title: "九宫格布局"
+  - title: "弹跳广告动画"
+  - title: "BFC调试"
+  - title: "抽签排序"
+  - title: "多重边框"
+codewar:
+  - title: "codewar-1"
+  - title: "codewar-2"
+  - title: "codewar-3"
