feat: update data

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: "Demo List"
+  - title: "Demo Camp"
     url: /demo/index.html
   - title: "Snippets"
     url: https://github.com/zhictory/frontend/blob/master/src/index.js
