feat: add note and demo

--- a/_config.yml
+++ b/_config.yml
@@ -158,6 +158,8 @@ footer:
 include:
   - .htaccess
   - _pages
+  - _notes
+  - _demos
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -280,6 +282,16 @@ compress_html:
     envs: development
 
 
+# Collections
+collections:
+  notes:
+    output: true
+    permalink: /:collection/:path/
+  demos:
+    output: true
+    permalink: /:collection/:path/
+
+
 # Defaults
 defaults:
   # _posts
@@ -294,13 +306,22 @@ defaults:
       toc: true
       share: true
       related: true
+  # _pages
   - scope:
       path: ""
       type: pages
     values:
       author_profile: true
-      read_time: false
-      comments: false
-      toc: false
-      share: false
-      related: false
+  # _demos
+  - scope:
+      path: ""
+      type: demos
+    values:
+      layout: none
+  # _notes
+  - scope:
+      path: ""
+      type: notes
+    values:
+      layout: normal
+      comments: true
