--- a/_data/note.yml
+++ b/_data/note.yml
@@ -7,3 +7,5 @@ list:
     url: "/note/使用@font-faces"
   - title: "CSS的leading"
     url: "/note/CSS的leading"
+  - title: "CSS矩阵Matrix"
+    url: "/note/CSS矩阵Matrix"
