--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
   - title: "Amazing Note"
-    url: /note/index.html
+    url: /note-archive/
   - title: "Demo Camp"
-    url: /demo/index.html
+    url: /demo-archive/
   - title: "Snippets"
     url: https://github.com/zhictory/snippet/blob/master/snippet.js
   - title: "About"
