--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
     url: /note-archive/
   - title: "Demo Camp"
     url: /demo-archive/
+  - title: "Awesome News"
+    url: /news-archive/
   - title: "Snippets"
     url: https://github.com/zhictory/snippet/blob/master/snippet.js
   - title: "About"
