--- a/_data/note.yml
+++ b/_data/note.yml
@@ -20,3 +20,5 @@ notes:
     url: "http://note.youdao.com/noteshare?id=48fe11146f401f879e4c6f0740aa9be9"
   - title: "位运算符的妙用"
     url: "https://juejin.im/post/5a98ea2f6fb9a028bb186f34"
+  - title: "判断数字"
+    url: "https://www.processon.com/mindmap/5abba303e4b027675e44ce74"
