feat: update notes and posts

--- a/_data/note.yml
+++ b/_data/note.yml
@@ -22,3 +22,15 @@ notes:
     url: "https://juejin.im/post/5a98ea2f6fb9a028bb186f34"
   - title: "判断数字"
     url: "https://www.processon.com/mindmap/5abba303e4b027675e44ce74"
+  - title: "继承的方式"
+    url: "http://note.youdao.com/noteshare?id=a6440b26b0afc940da076238cc284cee"
+  - title: "创建对象的模式"
+    url: "http://note.youdao.com/noteshare?id=71da8c51db048e8716a81b05e4d9b8b3"
+  - title: "开源许可证"
+    url: "https://www.processon.com/view/link/5b79800de4b0f8477db92985"
+  - title: "评判产品"
+    url: "https://mubu.com/doc/16dQrJIrdV"
+  - title: "Web 安全三个例子"
+    url: "https://www.processon.com/view/link/5b152603e4b0a838a07f9adf#map"
+  - title: "HTTP 幂等性"
+    url: "http://www.cnblogs.com/weidagang2046/archive/2011/06/04/2063696.html"
