feat: add notes

--- a/_data/note.yml
+++ b/_data/note.yml
@@ -34,3 +34,15 @@ notes:
     url: "https://www.processon.com/view/link/5b152603e4b0a838a07f9adf#map"
   - title: "HTTP 幂等性"
     url: "http://www.cnblogs.com/weidagang2046/archive/2011/06/04/2063696.html"
+  - title: "接口文档"
+    url: "https://mubu.com/doc/TDsOKIkNV"
+  - title: "Service Worker"
+    url: "https://juejin.im/post/59d43c2a5188257a125d9c5a"
+  - title: "浏览器发展（2012）"
+    url: "http://evolutionofweb.appspot.com/?hl=zh-cn#/evolution/day"
+  - title: "HTTP Status Codes"
+    url: "https://httpstatuses.com/"
+  - title: "CDN 缓存"
+    url: "http://bbs.qcloud.com/thread-3775-1-1.html"
+  - title: "Chrome Performance"
+    url: "https://zhuanlan.zhihu.com/p/29879682"
