feat: update note and post

--- a/_data/note.yml
+++ b/_data/note.yml
@@ -1,48 +1,83 @@
 # 包括我的有道云笔记和第三方作者的笔记
 notes:
   - title: "清除浮动"
+    category: "css"
     url: "http://note.youdao.com/noteshare?id=fafce1790c539531aefb8e598dffd6c4"
   - title: "移动端重置样式"
+    category: "css"
     url: "http://note.youdao.com/noteshare?id=e4e8a4972afb1f96cea73759a9c98f11"
   - title: "inherit style"
+    category: "css"
     url: "http://note.youdao.com/noteshare?id=37c0ca29d3430259c73cf1bf2d45a40e"
   - title: "Flex 要点"
+    category: "css"
     url: "http://note.youdao.com/noteshare?id=c9c620bb8254d87702e81cb0305f2f1a"
   - title: "widows 和 orphans"
+    category: "css"
     url: "http://note.youdao.com/noteshare?id=f80a902ab347fe7e65c3e59b3e0b8b3a"
   - title: "Git 提交信息规范"
+    category: "mixing"
     url: "http://note.youdao.com/noteshare?id=7d5e6244b5d49e7819bc54123d07d9a4"
   - title: "常用的 Git Alias"
+    category: "mixing"
     url: "http://note.youdao.com/noteshare?id=67ac3da2748bb0f9080ef1d670a3d2fd"
   - title: "Git 找回丢失的 commit"
+    category: "mixing"
     url: "http://note.youdao.com/noteshare?id=4211a9c49dd5dfe1f08c6eb7465f5c75"
   - title: "arguments 的故事"
+    category: "javascript"
     url: "http://note.youdao.com/noteshare?id=48fe11146f401f879e4c6f0740aa9be9"
   - title: "位运算符的妙用"
+    category: "javascript"
     url: "https://juejin.im/post/5a98ea2f6fb9a028bb186f34"
   - title: "判断数字"
+    category: "javascript"
     url: "https://www.processon.com/mindmap/5abba303e4b027675e44ce74"
   - title: "继承的方式"
+    category: "javascript"
     url: "http://note.youdao.com/noteshare?id=a6440b26b0afc940da076238cc284cee"
   - title: "创建对象的模式"
+    category: "javascript"
     url: "http://note.youdao.com/noteshare?id=71da8c51db048e8716a81b05e4d9b8b3"
   - title: "开源许可证"
+    category: "mixing"
     url: "https://www.processon.com/view/link/5b79800de4b0f8477db92985"
   - title: "评判产品"
+    category: "mixing"
     url: "https://mubu.com/doc/16dQrJIrdV"
   - title: "Web 安全三个例子"
+    category: "mixing"
     url: "https://www.processon.com/view/link/5b152603e4b0a838a07f9adf#map"
   - title: "HTTP 幂等性"
+    category: "mixing"
     url: "http://www.cnblogs.com/weidagang2046/archive/2011/06/04/2063696.html"
   - title: "接口文档"
+    category: "mixing"
     url: "https://mubu.com/doc/TDsOKIkNV"
   - title: "Service Worker"
+    category: "mixing"
     url: "https://juejin.im/post/59d43c2a5188257a125d9c5a"
   - title: "浏览器发展（2012）"
+    category: "mixing"
     url: "http://evolutionofweb.appspot.com/?hl=zh-cn#/evolution/day"
   - title: "HTTP Status Codes"
+    category: "mixing"
     url: "https://httpstatuses.com/"
   - title: "CDN 缓存"
+    category: "mixing"
     url: "http://bbs.qcloud.com/thread-3775-1-1.html"
   - title: "Chrome Performance"
+    category: "mixing"
     url: "https://zhuanlan.zhihu.com/p/29879682"
+  - title: "接口文档解决方案"
+    category: "mixing"
+    url: "https://mubu.com/edit/2W_KDynwvV"
+  - title: "如何评判产品"
+    category: "mixing"
+    url: "https://mubu.com/edit/2-DwRN8tdV"
+  - title: "表单设计原则"
+    category: "html"
+    url: "https://mubu.com/doc/2BACjydvnV"
+  - title: "静态资源优化"
+    category: "mixing"
+    url: "https://www.processon.com/view/link/5cd91e5de4b0d6160e871c19"
