--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,3 +3,11 @@ news:
     url: "https://juejin.im/post/5ca2e1935188254416288eb2"
     date: "2019-04-02"
     from: "掘金" 
+  - title: "TIOBE Index for May 2019"
+    url: "https://www.tiobe.com/tiobe-index/"
+    date: "2019-05-13"
+    from: "TIOBE"
+  - title: "【周刊-3】三年大厂面试官-十道前端面试题（欢迎挑战）"
+    url: "https://juejin.im/post/5cd82463518825692330d440"
+    date: "2019-05-13"
+    from: "掘金"
