feat: add demo and update note

--- a/_data/note.yml
+++ b/_data/note.yml
@@ -81,3 +81,6 @@ notes:
   - title: "静态资源优化"
     category: "mixing"
     url: "https://www.processon.com/view/link/5cd91e5de4b0d6160e871c19"
+  - title: "移动端适配方案"
+    category: "mixing"
+    url: "https://mubu.com/doc/24bikgAr9V"
