feat: update data

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,24 @@
 news:
+  - title: "CSS Weekly"
+    url: "https://css-weekly.com"
+    date: ""
+    from: "" 
+  - title: "JavaScript Weekly"
+    url: "https://javascriptweekly.com/issues"
+    date: ""
+    from: "" 
+  - title: "Nodejs Weekly"
+    url: "https://nodeweekly.com"
+    date: ""
+    from: "" 
+  - title: "ES.next News"
+    url: "http://esnextnews.com/"
+    date: ""
+    from: "" 
+  - title: "Frontend focus"
+    url: "https://frontendfoc.us/issues"
+    date: ""
+    from: "" 
   - title: "ES6、ES7、ES8、ES9、ES10新特性一览"
     url: "https://juejin.im/post/5ca2e1935188254416288eb2"
     date: "2019-04-02"
@@ -7,6 +27,10 @@ news:
     url: "https://www.tiobe.com/tiobe-index/"
     date: "2019-05-13"
     from: "TIOBE"
+  - title: "【周刊-3】三年大厂面试官-十道前端面试题（欢迎挑战）"
+    url: "https://juejin.im/post/5cd82463518825692330d440"
+    date: "2019-05-13"
+    from: "掘金"
   - title: "【周刊-3】三年大厂面试官-十道前端面试题（欢迎挑战）"
     url: "https://juejin.im/post/5cd82463518825692330d440"
     date: "2019-05-13"
