[chore] rename notes

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -19,19 +19,19 @@ news:
     url: "https://frontendfoc.us/issues"
     date: ""
     from: "" 
-  - title: "ES6、ES7、ES8、ES9、ES10新特性一览"
+  - title: "ES6、ES7、ES8、ES9、ES10 新特性一览"
     url: "https://juejin.im/post/5ca2e1935188254416288eb2"
     date: "2019-04-02"
-    from: "掘金" 
+    from: "" 
   - title: "TIOBE Index for May 2019"
     url: "https://www.tiobe.com/tiobe-index/"
     date: "2019-05-13"
-    from: "TIOBE"
+    from: ""
   - title: "【周刊-3】三年大厂面试官-十道前端面试题（欢迎挑战）"
     url: "https://juejin.im/post/5cd82463518825692330d440"
     date: "2019-05-13"
-    from: "掘金"
-  - title: "【周刊-3】三年大厂面试官-十道前端面试题（欢迎挑战）"
-    url: "https://juejin.im/post/5cd82463518825692330d440"
-    date: "2019-05-13"
-    from: "掘金"
+    from: ""
+  - title: "Introduction to Svelte"
+    url: "https://daveceddia.com/svelte-intro/"
+    date: "2019-07-24"
+    from: ""
