--- a/_data/note.yml
+++ b/_data/note.yml
@@ -16,10 +16,10 @@ notes:
     category: "css"
     url: "http://note.youdao.com/noteshare?id=f80a902ab347fe7e65c3e59b3e0b8b3a"
   - title: "Git 提交信息规范"
-    category: "mixing"
+    category: "mixin"
     url: "http://note.youdao.com/noteshare?id=7d5e6244b5d49e7819bc54123d07d9a4"
   - title: "常用的 Git Alias"
-    category: "mixing"
+    category: "mixin"
     url: "http://note.youdao.com/noteshare?id=67ac3da2748bb0f9080ef1d670a3d2fd"
   - title: "arguments 的故事"
     category: "javascript"
@@ -37,47 +37,53 @@ notes:
     category: "javascript"
     url: "http://note.youdao.com/noteshare?id=71da8c51db048e8716a81b05e4d9b8b3"
   - title: "开源许可证"
-    category: "mixing"
+    category: "mixin"
     url: "https://www.processon.com/view/link/5b79800de4b0f8477db92985"
   - title: "评判产品"
-    category: "mixing"
+    category: "mixin"
     url: "https://mubu.com/doc/16dQrJIrdV"
   - title: "Web 安全三个例子"
-    category: "mixing"
+    category: "mixin"
     url: "https://www.processon.com/view/link/5b152603e4b0a838a07f9adf#map"
   - title: "HTTP 幂等性"
-    category: "mixing"
+    category: "mixin"
     url: "http://www.cnblogs.com/weidagang2046/archive/2011/06/04/2063696.html"
   - title: "接口文档"
-    category: "mixing"
+    category: "mixin"
     url: "https://mubu.com/doc/TDsOKIkNV"
   - title: "Service Worker"
-    category: "mixing"
+    category: "mixin"
     url: "https://juejin.im/post/59d43c2a5188257a125d9c5a"
   - title: "浏览器发展（2012）"
-    category: "mixing"
+    category: "mixin"
     url: "http://evolutionofweb.appspot.com/?hl=zh-cn#/evolution/day"
   - title: "HTTP Status Codes"
-    category: "mixing"
+    category: "mixin"
     url: "https://httpstatuses.com/"
   - title: "CDN 缓存"
-    category: "mixing"
+    category: "mixin"
     url: "http://bbs.qcloud.com/thread-3775-1-1.html"
   - title: "Chrome Performance"
-    category: "mixing"
+    category: "mixin"
     url: "https://zhuanlan.zhihu.com/p/29879682"
   - title: "接口文档解决方案"
-    category: "mixing"
+    category: "mixin"
     url: "https://mubu.com/edit/2W_KDynwvV"
   - title: "如何评判产品"
-    category: "mixing"
+    category: "mixin"
     url: "https://mubu.com/edit/2-DwRN8tdV"
   - title: "表单设计原则"
     category: "html"
     url: "https://mubu.com/doc/2BACjydvnV"
   - title: "静态资源优化"
-    category: "mixing"
+    category: "mixin"
     url: "https://www.processon.com/view/link/5cd91e5de4b0d6160e871c19"
   - title: "移动端适配方案"
-    category: "mixing"
+    category: "mixin"
     url: "https://mubu.com/doc/24bikgAr9V"
+  - title: "Asynchronous Javascript"
+    category: "javascript"
+    url: "http://note.youdao.com/noteshare?id=680a221e8f68a32d90fcb907090dc3f9&sub=8A0C45FC5FE942A48F6FD6C56C441252"
+  - title: "常用 vscode 插件"
+    category: "mixin"
+    url: "http://note.youdao.com/noteshare?id=d2556152e866feba38c69f545c62daeb&sub=WEB71256a6b6b08e9cc9a729be0c2860b98"
