[feat] update news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -23,20 +23,8 @@ news:
     url: "https://web-design-weekly.com/archive/"
     date: ""
     from: ""
-  - title: "OSChina News"
-    url: "https://www.oschina.net/news"
-    date: ""
-    from: ""
-  - title: "掘金热榜"
-    url: "https://juejin.im/timeline/recommended?sort=monthly_hottest"
-    date: ""
-    from: ""
   - title: "TIOBE Index for May 2019"
     url: "https://www.tiobe.com/tiobe-index/"
-    date: ""
-    from: ""
-  - title: "开发者头条 - 人工智能"
-    url: "https://toutiao.io/c/ai"
     date: ""
     from: ""
   - title: "Thoughtworks"
@@ -45,5 +33,45 @@ news:
     from: ""
   - title: "InfoQ"
     url: "https://www.infoq.cn/"
+    date: ""
+    from: ""
+  - title: "CSS-TRICKS"
+    url: "https://css-tricks.com/archives/"
+    date: ""
+    from: ""
+  - title: "r/programming"
+    url: "https://www.reddit.com/r/programming/"
+    date: ""
+    from: ""
+  - title: "Github Explore"
+    url: "https://github.com/explore"
+    date: ""
+    from: ""
+  - title: "Hacker News"
+    url: "https://news.ycombinator.com/"
+    date: ""
+    from: ""
+  - title: "Readhub"
+    url: "https://readhub.cn/topics"
+    date: ""
+    from: ""
+  - title: "泡面小镇快讯"
+    url: "https://www.pmtown.com/newsflashes"
+    date: ""
+    from: ""
+  - title: "36Kr 资讯"
+    url: "https://36kr.com/information/web_news"
+    date: ""
+    from: ""
+  - title: "CSDN 推荐"
+    url: "https://www.csdn.net/"
+    date: ""
+    from: ""
+  - title: "OSChina News"
+    url: "https://www.oschina.net/news"
+    date: ""
+    from: ""
+  - title: "ifanr"
+    url: "https://www.ifanr.com/"
     date: ""
     from: ""
