[feat] update author bio

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Randolf Zhang"
   avatar           : "/assets/img/logo.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I have two cats."
+  bio              : "Sweet dreams."
   location         : "Shenzhen, China"
   email            : 
   links:
