--- a/_data/note.yml
+++ b/_data/note.yml
@@ -3,9 +3,9 @@ notes:
   - title: "清除浮动"
     category: "css"
     url: "http://note.youdao.com/noteshare?id=fafce1790c539531aefb8e598dffd6c4"
-  - title: "移动端重置样式"
-    category: "css"
-    url: "http://note.youdao.com/noteshare?id=e4e8a4972afb1f96cea73759a9c98f11"
+  - title: "Github 最佳实践"
+    category: "mixin"
+    url: "http://note.youdao.com/noteshare?id=4d202a23cf111973bd35ae3ba9d71c2a&sub=B7B912787978455989B690857006CE08"
   - title: "inherit style"
     category: "css"
     url: "http://note.youdao.com/noteshare?id=37c0ca29d3430259c73cf1bf2d45a40e"
