--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "npm-run-all": "^4.1.5",
     "onchange": "^5.1.3",
     "uglify-js": "^3.4.9",
-    "glob-parent": ">=5.1.2",
-    "hosted-git-info": ">=2.8.9",
-    "tree-kill": ">=1.2.2",
-    "minimist": ">=1.2.3",
-    "set-value": ">=2.0.1",
-    "mixin-deep": ">=1.3.2"
+    "glob-parent": "^5.1.2",
+    "hosted-git-info": "^2.8.9",
+    "tree-kill": "^1.2.2",
+    "minimist": "^1.2.3",
+    "set-value": "^2.0.1",
+    "mixin-deep": "^1.3.2"
   },
   "scripts": {
     "uglify": "uglifyjs assets/js/vendor/jquery/jquery-3.3.1.min.js assets/js/plugins/jquery.fitvids.js assets/js/plugins/jquery.greedy-navigation.js assets/js/plugins/jquery.magnific-popup.js assets/js/plugins/jquery.smooth-scroll.min.js assets/js/plugins/jquery.ba-throttle-debounce.js assets/js/_main.js -c -m -o assets/js/main.min.js",
