--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ analytics:
 author:
   name: "Randolf Zhang"
   avatar: "/assets/img/logo.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "Sweet dreams."
+  # bio: "Sweet dreams."
   location: "Shenzhen, China"
   email:
   links:
