--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,11 +2,7 @@
 main:
   - title: "Amazing Note"
     url: /note-archive/
-  # - title: "Demo Camp"
-  #   url: /demo-archive/
-  # - title: "Awesome News"
-  #   url: /news-archive/
-  # - title: "Snippets"
-  #   url: https://github.com/zhictory/snippet/blob/master/snippet.js
+  - title: "Demo Camp"
+    url: /demo-archive/
   - title: "About"
     url: /about
